# emmer

./: Cargo.toml  taskfile.yml
src/: config.rs  dbus.rs  main.rs  notification.rs  renderer.rs  utils.rs
src/engine/items/: item.rs  mod.rs  stack.rs  style.rs
src/renderer/: blur.rs  color.rs  colors.rs  mod.rs  shapes.rs
src/renderer/complex/: block.rs  card.rs
src/renderer/draw/: block.rs  mod.rs
src/ui/: app.rs  bounds.rs  buffers.rs  colors.rs  mod.rs  state.rs
src/ui/draw/: block.rs  mod.rs
src/ui/items/: item.rs  mod.rs  stack.rs  style.rs
src/ui/renderer/: mod.rs
src/ui/renderer/draw/: block.rs
