[package]
name = "emmer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
cairo-rs = { version = "0.22.0", features = ["png"] }
env_logger = "0.11.9"
log = "0.4.29"
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.12"
wide = "1.1.1"
