[package]
name = "emmer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
cairo-rs = "0.22.0"
env_logger = "0.11.9"
log = "0.4.29"
pango = "0.22.6"
pangocairo = "0.22.0"
rand = "0.10.1"
smithay-client-toolkit = "0.20.0"
tokio = { version = "1.52.3", features = ["default", "macros", "rt", "rt-multi-thread", "sync"] }
wayland-client = "0.31.12"
zbus = "5.15.0"
